cmake_minimum_required(VERSION 3.14)
project(alg)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

add_executable(array 玩转儿数据结构/array/array.cpp)
add_executable(Tmain 玩转儿数据结构/test/Tmain.cpp)
add_executable(trie 玩转儿数据结构/trie/trie.cpp)
add_executable(677MapSum 玩转儿数据结构/trie/677MapSum.cpp)
add_executable(211WordDictionary 玩转儿数据结构/trie/211WordDictionary.cpp)
add_executable(203ListNode 玩转儿数据结构/linklist/203ListNode.cpp)
add_executable(recursion 玩转儿数据结构/recursion/recursion.cpp)
add_executable(BST 玩转儿数据结构/bst/BST.cpp)
add_executable(hahshMain 玩转儿数据结构/hash/hahshMain.cpp)
add_executable(347_local 玩转儿数据结构/heap/347_local.cpp)
add_executable(347topKFrequent 玩转儿数据结构/heap/347topKFrequent.cpp)
add_executable(heap 玩转儿数据结构/heap/heap.cpp)
add_executable(LinkedList 玩转儿数据结构/linklist/LinkedList.cpp)
